--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
 	 		<classifier>tests</classifier>
 	 	</dependency>
 	
+		<dependency>
+	  		<groupId>org.restflow</groupId>
+			<artifactId>restflow-groovy</artifactId>
+	 		<version>1.0b3</version>
+	 	</dependency>
+	 	
 	    <dependency> 
 	    	<groupId>org.springframework</groupId>
 	    	<artifactId>spring-context</artifactId>
