--- a/src/test/resources/workflows/PublishDirectory/PublishDirectory.yaml
+++ b/src/test/resources/workflows/PublishDirectory/PublishDirectory.yaml
@@ -1,9 +1,9 @@
 
 imports:
 
-  - classpath:/common/java/actors.yaml
+  - classpath:/org/restflow/java/actors.yaml
   - classpath:/org/restflow/bash/bashActor.yaml
-  - classpath:/common/directors.yaml
+  - classpath:/org/restflow/directors.yaml
 
 components:
 
