--- a/src/test/resources/workflows/WorkspaceFilesBash/WorkspaceFilesBash.yaml
+++ b/src/test/resources/workflows/WorkspaceFilesBash/WorkspaceFilesBash.yaml
@@ -2,8 +2,8 @@
 imports:
 
   - actors:actors.yaml
-  - classpath:/common/bash/bashActor.yaml
-  - classpath:/common/directors.yaml
+  - classpath:/org/restflow/bash/bashActor.yaml
+  - classpath:/org/restflow/directors.yaml
 
 components:
 
