Renamed test and resources associated with it.

--- a/src/test/resources/org/restflow/bash/test/TestWorkflowsBash/SubscribeLocalPaths/SubscribeLocalPaths.yaml
+++ b/src/test/resources/org/restflow/bash/test/TestWorkflowsBash/SubscribeLocalPaths/SubscribeLocalPaths.yaml
@@ -7,7 +7,7 @@ imports:
 
 components:
 
-  - id: SubscribeWithLocalPaths
+  - id: SubscribeLocalPaths
     type: Workflow
     properties:
       director: !ref PublishSubscribeDirector
