--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
  	<groupId>org.restflow</groupId>
 	<artifactId>restflow-bash</artifactId>
-	<version>1.0b3</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 
@@ -38,20 +38,20 @@
 	  	<dependency>
 	  		<groupId>org.restflow</groupId>
 			<artifactId>RestFlow</artifactId>
-	 		<version>1.0b3</version>
+	 		<version>1.1.0-SNAPSHOT</version>
 	 	</dependency>
 	
 	  	<dependency>
 	  		<groupId>org.restflow</groupId>
 			<artifactId>RestFlow</artifactId>
-	 		<version>1.0b3</version>
+	 		<version>1.1.0-SNAPSHOT</version>
 	 		<classifier>tests</classifier>
 	 	</dependency>
 	
 		<dependency>
 	  		<groupId>org.restflow</groupId>
 			<artifactId>restflow-groovy</artifactId>
-	 		<version>1.0b3</version>
+	 		<version>1.1.0-SNAPSHOT</version>
 	 	</dependency>
 	 	
 	    <dependency> 
